tests/data/fortran/errors/parser/err_result_shadows_argument.f90
function f(res) result(res)
  integer, intent(in) :: res
end function f
